# OpenRelay

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  README.md  pyproject.toml
.harness/: .gitignore
.project-memory/: aliases.yaml  index.sqlite
.project-memory/decisions/: feishu_live_turn_transcript_first.yaml  stop_command_two_stage_interrupt.yaml  task_board_self_close_protocol.yaml
.project-memory/facts/: design_packages_are_task_source.yaml  feishu_codex_tui_gap_priority.yaml  feishu_streaming_reply_card_structure.yaml  (+5 more)
docs/: TaskBoard.md  architecture.md  edit-update-demo.txt  feature-inventory.md  runtime-verification-matrix.md  task-board-protocol.md
scripts/: reboot_openrelay.service.sh  restart-server.sh
tests/: test_agent_runtime.py  test_backend_registry.py  test_codex_backend.py  test_codex_protocol_mapper.py  test_codex_runtime_backend.py  test_config.py  test_diff_e2e.py  test_feishu.py  test_feishu_dispatcher.py  test_feishu_messenger.py  test_feishu_streaming.py  test_feishu_ws_proto.py  test_help_renderer.py  test_live_turn_presenter.py  test_native_sessions.py  test_plan_status_e2e.py  test_render.py  test_resume_reply_behavior.py  test_runtime.py  test_runtime_card_sender.py  test_runtime_commands.py  test_runtime_help.py  test_runtime_interactions.py  test_runtime_live.py  test_runtime_rendering.py  test_runtime_turn.py  test_server.py  test_session_binding_store.py  test_session_browser.py  test_session_list_card.py  test_session_scope.py  test_session_workspace.py  test_state.py  test_streaming_card.py
(+537 files in other folders)
