[project]
name = "openrelay"
version = "0.1.0"
description = "Remote coding-agent terminal over Feishu for Codex and Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1",
  "lark-oapi>=1.5.3",
  "pygments>=2.19.1,<3",
  "pyyaml>=6.0.3",
  "rich>=14.3.3",
  "uvicorn>=0.34.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9",
  "pytest-asyncio>=0.25.0,<1",
]

[project.scripts]
openrelayd = "openrelay.__main__:main"
openrelay-trace = "openrelay.tools.trace:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openrelay"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
